# cmsdl2app

./: CMakeLists.txt  README.md  autobuildrun.bat  build.bat  buildrun.bat
cmake/test/: FindSDL.cmake
docs/: cheatsheets.md  cmake.md  imgui.md  ref.md  sdl.md
src/: sdl2window.cpp  vulkan_imgui_docking.cpp  vulkan_imgui_editor.cpp  windowimguisdl.cpp
src/core/: design.md  platform.cpp  platform.hpp  sdl-wrapper.cpp  sdl-wrapper.hpp
tests/: sdl2_imgui.cpp  sdl2_mixer_test01.c  sdl2gl3w.cpp  sdl2gl3wimgui.cpp  sdl2vulkan1imgui1.cpp  testhittesting.c
